More legible purple and font fixes

--- a/static/assets/css/screen.css
+++ b/static/assets/css/screen.css
@@ -21,15 +21,15 @@ http://modularscale.com/
 */
 
 :root {
-  --primary-color: rebeccapurple;
+  --primary-color: #ab57ff;
   --secondary-color: #0091D5;
   --font-color: #e8e8f0;
   --bg-color: #222;
   --heading-color: #e8e8f0
   --meta-color: #9e9e9e;
-  --font-family: Lora, "Avenir Next", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  --font-meta: Raleway, "Avenir Next", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  --font-size-standard: 20px;
+  --font-family:'Open Sans', Ubuntu, Helvetica, Calibri, Tahoma, Verdana, Arial, sans-serif;
+  --font-meta:  Lora,'Palatino Linotype','Book Antiqua','New York','DejaVu serif',serif;
+  --font-size-standard: 1.2em;
 }
 
 html {
@@ -170,7 +170,7 @@ li {
 }
 
 a.read-more, a.read-more:visited, a.archive-meta, a.post-date {
-  	font-family: var(--font-meta);
+  	font-family: var(--font-family);
     color: var(--meta-color);/*#FC7E0F, #DA1F15, #F17F33 */
     text-decoration: none;
 }
@@ -334,7 +334,7 @@ dl dd {
 }
 
 .nav {
-  	font-family: var(--font-meta);
+  	font-family: var(--font-family);
 }
 
 .nav a {
@@ -423,21 +423,21 @@ a.nav-home, a.nav-blog {
 }
 
 .post-title {
-    font-family: var(--font-meta);
+    font-family: var(--font-family);
 	line-height: 1.4;
 }
 
 .post-group {
 	margin-top: 64px;
 	color: var(--primary-color);
-    font-family: var(--font-meta);
+    font-family: var(--font-family);
     font-size: 24px;
 }
 
 .post-meta {
   	color: var(--meta-color);
 	text-transform: uppercase;
-    font-family: var(--font-meta);
+    font-family: var(--font-family);
 	font-size: 16px;
   	margin-top: .702rem;
 }
@@ -542,7 +542,7 @@ a .dt-published:hover {
   
 .reply-mail {
 	margin-bottom: 54px;
-    font-family: var(--font-meta);
+    font-family: var(--font-family);
 }
 
 /* Koenig image styles */
@@ -717,7 +717,7 @@ video {
 .microblog_time a {
   color: var(--meta-color);
   text-decoration: none;
-  font-family: var(--font-meta);
+  font-family: var(--font-family);
 }
 
 .microblog_text a {
